// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> does not render at first and then render 1`] = `
<body>
  <div />
</body>
`;

exports[`<Modal /> does not render at first and then render 2`] = `
<body>
  <div
    aria-hidden="true"
  />
  .c2 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c2:hover {
  color: #8c94a6;
}

.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
  background: rgba(0,0,0,0.5);
}

.c1 {
  position: relative;
  width: 50vw;
  max-height: calc(100vh - 2 * 10vh);
  margin: 10vh auto;
  padding: 2rem;
  overflow-y: auto;
  color: #434956;
  background: #fff;
  border-radius: 0.25rem;
  outline: none;
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
}

@media (max-width:1200px) {
  .c1 {
    width: 60vw;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 80vw;
  }
}

@media (max-width:600px) {
  .c1 {
    width: calc(100% - 2 * 1rem);
    max-height: calc(100vh - 2 * 1rem);
    margin: 1rem;
  }
}

@media (max-width:600px) {
  .c3 {
    position: fixed;
    top: 0.625rem;
    right: 0.625rem;
  }
}

<reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="c0"
          data-reach-dialog-overlay="true"
        >
          <div
            aria-label="title"
            aria-modal="true"
            class="c1"
            data-reach-dialog-content="true"
            role="dialog"
            tabindex="-1"
          >
            Some content
            <button
              class="c2 c3"
              title="fermer la modale"
            >
              <div
                class="c4"
              >
                fermer la modale
              </div>
              <svg
                aria-hidden="true"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`<Modal /> renders the provided wrapper 1`] = `
<body>
  <div
    aria-hidden="true"
  />
  .c2 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c2:hover {
  color: #8c94a6;
}

.c4:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
  background: rgba(0,0,0,0.5);
}

.c3 {
  position: absolute;
  top: 0;
  right: 0;
}

.c1 {
  background-color: red;
}

@media (max-width:600px) {
  .c3 {
    position: fixed;
    top: 0.625rem;
    right: 0.625rem;
  }
}

<reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="c0"
          data-reach-dialog-overlay="true"
        >
          <span
            aria-label="title"
            class="c1"
          >
            This won't be displayed
            <button
              class="c2 c3"
              title="fermer la modale"
            >
              <div
                class="c4"
              >
                fermer la modale
              </div>
              <svg
                aria-hidden="true"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;
